[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dated-money"
version = "0.0.6"
description = "Compute with monetary values in the currencies supported by https://www.exchangerate-api.com."
readme = "README.md"
authors = [
    { name = "Juan Reyero", email="juan@juanreyero.com" }
]
requires-python = ">=3.8"
license = { file="LICENSE" }
dependencies = [
    "requests >= 2.26.0",
    "python-dateutil >= 2.8.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "jedi >= 0.18.1",
    "pylint >= 2.13.9",
    "pytest >= 7.0.0",
    "yapf >= 0.32.0"
]

[project.scripts]
dmon = "dmon:main"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=setup.py --ignore=build --ignore=doc --ignore=flymake"
pythonpath = [
  "."
]

[project.urls]
"Homepage" = "https://github.com/juanre/dmon"
