[tool.poetry]
name = "dated-money"
version = "1.0.2"
description = "Compute with dated monetary values."
readme = "README.md"
authors = ["Juan Reyero <juan@juanreyero.com>"]
license = "MIT"
packages = [
    { include = "dmon" }
]

[tool.poetry.urls]
"Homepage" = "https://github.com/juanre/dmon"
"Repository" = "https://github.com/juanre/dmon"

[tool.poetry.dependencies]
python = "^3.8"  # pytest requirement
requests = "^2.31.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"
pyright = "^1.1.356"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dmon-rates = "dmon.rates:main"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=setup.py --ignore=build --ignore=doc --ignore=flymake"
pythonpath = [
  "."
]

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310", "py311", "py312"]
